Updated docu for 0.2.0 release

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,9 @@ the necessary performance all critical algorithms are implemented in C++.
 On my machine fbroc is capable of calculating about 100000 bootstrap replicates 
 for a ROC curves constructed from 500 observations in about one second.
 
+To try out the package you can visit the [package website](http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/). 
+A shiny interface for this package is hosted there.
+
 To install:
 
 * latest released version: `install.packages("fbroc")`
