--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,8 @@ knitr::opts_chunk$set(
 ------------------------------------------------
 
 fbroc is intended for the *fast* bootstrapping of ROC curves, so that the
-package can be used for simulation studies and shiny applications. To achieve
-the necessary performance all critical algorithms are implemented in C++.
+package can be used for simulation studies and shiny applications. It allows for the analysis and
+comparison of ROC curves. To achieve the necessary performance all critical algorithms are implemented in C++.
 On my machine fbroc is capable of calculating about 100000 bootstrap replicates 
 for a ROC curves constructed from 500 observations in about one second.
 
