--- a/README.Rmd
+++ b/README.Rmd
@@ -23,9 +23,8 @@ knitr::opts_chunk$set(
 fbroc is intended for the *fast* bootstrapping of ROC curves, so that the
 package can be used for simulation studies and shiny applications. It allows for the analysis and
 comparison of ROC curves. To achieve the necessary performance all critical algorithms are implemented in C++.
-On my machine fbroc is capable of calculating about 100000 bootstrap replicates 
-for a ROC curves constructed from 500 observations in about one second.
-
+On a typical desktop computer the time needed for the calculation of 100000 bootstrap replicates 
+given 500 observations requires time on the order of magnitude of one second.
 To try out the package you can visit the [package website](http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/). 
 A shiny interface for this package is hosted there.
 
